# Embedded_IoT

./: README.md
build_tool/01-cmake/BMS/: CMakeLists.txt
build_tool/01-cmake/BMS/inc/: BMS.hpp
build_tool/01-cmake/BMS/src/: BMS.cpp
build_tool/01-cmake/first_cmake_test/: CMakeLists.txt  main.cpp
build_tool/01-cmake/first_cmake_test/inc/: CMakeLists.txt  calc.hpp
build_tool/01-cmake/first_cmake_test/src/: calc.cpp
build_tool/02-bazel/bazel_c++/: BUILD  bazel-bazel_c++  bazel-bin  bazel-out  bazel-testlogs  main.cpp
build_tool/02-bazel/bazel_c++/Summing/: BUILD  sum.cpp  sum.h
esp32/esp_c/: CMakeLists.txt  sdkconfig
esp32/esp_c/main/: CMakeLists.txt  firstProject.c
esp32/esp_cpp/: CMakeLists.txt  sdkconfig.old
esp32/esp_cpp/application/GPIO/: CMakeLists.txt  GPIO.h
esp32/esp_cpp/application/WiFi/: CMakeLists.txt  WiFi.cpp  WiFi.h
esp32/esp_cpp/core/: CMakeLists.txt
esp32/esp_cpp_v2/: main.cpp
esp32/esp_cpp_v2/inc/: GPIO.h
esp32/esp_cpp_v2/src/: GPIO.cpp
esp32/esp_device_driver/: CMakeLists.txt
esp32/esp_device_driver/core/: CMakeLists.txt
esp32/qt/: CMakeLists.txt  sdkconfig
esp32/qt/main/: CMakeLists.txt  main.cpp
socket_programming/socket_c/multi_client_server/: multi_client_tcp  multi_client_tcp.c  multi_server_tcp  multi_server_tcp.c
socket_programming/socket_c/single_client_server/: client_tcp  client_tcp.c  server_tcp  server_tcp.c
socket_programming/socket_cpp/: main.cpp  main.hpp
socket_programming/socket_cpp/Simple_Socket/: bindingSocket.cpp  bindingSocket.hpp  simple_socket.cpp  simple_socket.hpp
(+10 files in other folders)
